--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.core.ProfileActivity"></activity>
         <activity
             android:name=".activity.core.CoreActivity"
-            android:label="@string/title_activity_core"></activity>
+            android:label="@string/title_activity_core" />
         <activity android:name=".activity.entry.SetProfileActivity" />
         <activity android:name=".activity.entry.RegisterActivity" />
         <activity android:name=".activity.TermsActivity" />
